# bundler

./: Cargo.toml  README.md
src/: append_map.rs  bool_or.rs  bootstrap.rs  canonical.rs  generic.rs  ir.rs  ir2.rs  lib.rs  loader.rs  namespace.rs  schemalet.rs  typify.rs  typify_draft.rs
src/convert/: array.rs  mod.rs  object.rs  one_of.rs
src/typespace/: mod.rs  type_enum.rs  type_struct.rs
