[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
heck = "0.5.0"
prettyplease = "0.2.35"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.104"
thiserror = "2.0.12"
url = { version = "2.5.2", features = ["serde"] }
unicode-ident = "1.0.18"
